force-app/main/default/objects/Trust_Asset__c/Trust_Asset__c.object-meta.xml
<CustomObject>
    <label>Trust Asset</label>
    <nameField>
        <label>Trust Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trust Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>