force-app/main/default/objects/Trust_Asset__c/fields/Address_Title_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Address_Title_Sent_To__c</fullName>
    <label>Address Title Sent To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>