force-app/main/default/objects/Trust_Asset__c/fields/Amount_Paid_by_MPT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_MPT__c</fullName>
    <label>Amount Paid by MPT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>