force-app/main/default/objects/Trust_Asset__c/fields/Approximate_Depreciated_Balance__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Depreciated_Balance__c</fullName>
    <formula>IF(AND(!ISBLANK(Amount_Paid_by_MPT__c), 
Amount_Paid_by_MPT__c - ((TODAY() - Purchase_Date__c)/365.25*12 * Monthly_Depreciation_60_Months__c) &gt; 0), 
Amount_Paid_by_MPT__c - ((TODAY() - Purchase_Date__c)/365.25*12 * Monthly_Depreciation_60_Months__c),
IF(AND(!ISBLANK(Value_or_Purchase_Price_if_Prior_to_MPT__c), 
Value_or_Purchase_Price_if_Prior_to_MPT__c - ((TODAY() - Purchase_Date__c)/365.25*12 * Monthly_Depreciation_60_Months__c) &gt;0),
Value_or_Purchase_Price_if_Prior_to_MPT__c - ((TODAY() - Purchase_Date__c)/365.25*12 *  Monthly_Depreciation_60_Months__c),
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approximate Depreciated Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>