force-app/main/default/objects/Trust_Asset__c/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <label>Asset Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>