force-app/main/default/objects/Trust_Asset__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>Gave Away</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>