force-app/main/default/objects/Trust_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Desktop Computer</fullName>
            </value>
            <value>
                <fullName>Funeral Plan</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Game Console</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>Laptop/Tablet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>