force-app/main/default/objects/Trust_Asset__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trust Assets</relationshipLabel>
    <relationshipName>Trust_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>