force-app/main/default/objects/Trust_Asset__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing</label>
    <referenceTo>Closing__c</referenceTo>
    <relationshipLabel>Trust Assets</relationshipLabel>
    <relationshipName>Trust_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>