force-app/main/default/objects/Trust_Asset__c/fields/Date_Lien_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Lien_Form_Sent__c</fullName>
    <label>Date Lien Form Sent</label>
    <type>Date</type>
</CustomField>