force-app/main/default/objects/Trust_Asset__c/fields/Date_of_Lien__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Lien__c</fullName>
    <label>Date of Lien</label>
    <type>Date</type>
</CustomField>