force-app/main/default/objects/Trust_Asset__c/fields/Date_Title_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Date_Title_Mailed__c</fullName>
    <label>Date Title Mailed</label>
    <type>Date</type>
</CustomField>