force-app/main/default/objects/Trust_Asset__c/fields/Funeral_Plan_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Plan_Contact_Email__c</fullName>
    <label>Funeral Plan Contact Email</label>
    <type>Email</type>
</CustomField>