force-app/main/default/objects/Trust_Asset__c/fields/Funeral_Plan_Purchased_By_The_ARC__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Plan_Purchased_By_The_ARC__c</fullName>
    <label>Funeral Plan Purchased By The Arc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>