force-app/main/default/objects/Trust_Asset__c/fields/How_Was_Title_Mailed__c.field-meta.xml
<CustomField>
    <fullName>How_Was_Title_Mailed__c</fullName>
    <label>How Was Title Mailed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>