force-app/main/default/objects/Trust_Asset__c/fields/Monthly_Depreciation_60_Months__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Depreciation_60_Months__c</fullName>
    <formula>IF(!ISBLANK(Amount_Paid_by_MPT__c), Amount_Paid_by_MPT__c/60,
IF(!ISBLANK(Value_or_Purchase_Price_if_Prior_to_MPT__c), Value_or_Purchase_Price_if_Prior_to_MPT__c/60, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Depreciation (60 Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>