force-app/main/default/objects/Trust_Asset__c/fields/Name_On_Title__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Title__c</fullName>
    <label>Name On Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>