force-app/main/default/objects/Trust_Asset__c/fields/Paid_Off__c.field-meta.xml
<CustomField>
    <fullName>Paid_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Off</label>
    <type>Checkbox</type>
</CustomField>