force-app/main/default/objects/Trust_Asset__c/fields/Person_Title_Sent_to__c.field-meta.xml
<CustomField>
    <fullName>Person_Title_Sent_to__c</fullName>
    <label>Person Title Sent to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>