force-app/main/default/objects/Trust_Asset__c/fields/Person_Who_Sent_Title__c.field-meta.xml
<CustomField>
    <fullName>Person_Who_Sent_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Who Sent Title</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trust_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>