force-app/main/default/objects/Trust_Asset__c/fields/Prescribed_Form_for_Release_of_Lien__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Form_for_Release_of_Lien__c</fullName>
    <formula>hyperlink(&quot;https://www.txdmv.gov/sites/default/files/form_files/VTR-266.pdf&quot;, &quot;Link to Texas Lien Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prescribed Form for Release of Lien</label>
    <type>Text</type>
</CustomField>