force-app/main/default/objects/Trust_Asset__c/fields/True_Link_Trust_EID__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Trust_EID__c</fullName>
    <formula>Trust__r.True_Link_ID_from_TL_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Link Trust EID</label>
    <type>Text</type>
</CustomField>