force-app/main/default/objects/Trust_Asset__c/fields/True_Link_Trust_ID__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Trust_ID__c</fullName>
    <formula>Trust__r.TrueLink_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True Link Trust ID</label>
    <type>Text</type>
</CustomField>