force-app/main/default/objects/Trust_Asset__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Trust Assets</relationshipLabel>
    <relationshipName>Trust_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>