force-app/main/default/objects/Trust_Asset__c/fields/Value_or_Purchase_Price_if_Prior_to_MPT__c.field-meta.xml
<CustomField>
    <fullName>Value_or_Purchase_Price_if_Prior_to_MPT__c</fullName>
    <label>Value or Purchase Price if Prior to MPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>