force-app/main/default/objects/Trust_Asset__c/fields/X18_Digit_Beneficiary_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Beneficiary_ID__c</fullName>
    <formula>Trust__r.Beneficiary__r.X18_Digit_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Beneficiary ID</label>
    <type>Text</type>
</CustomField>