force-app/main/default/objects/Trust_Asset__c/fields/X18_Digit_Trust_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Trust_Asset_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Trust Asset ID</label>
    <type>Text</type>
</CustomField>