force-app/main/default/objects/Trust_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Amount_Paid_by_MPT__c</columns>
    <columns>Funeral_Plan_Policy_Number__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>VIN__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>