force-app/main/default/objects/Trust_Asset__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Funeral_Agency__c</columns>
    <columns>Funeral_Plan_Policy_Number__c</columns>
    <columns>Funeral_Plan_Contact__c</columns>
    <columns>Funeral_Plan_Contact_Email__c</columns>
    <columns>Funeral_Plan_Contact_Phone__c</columns>
    <columns>Funeral_Plan_Purchased_By_The_ARC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Funeral Plan</value>
    </filters>
    <label>Funeral Plans</label>
</ListView>